PhonelogTask correctly being saved and displayed #133

--- a/angular-client/src/app/components/phonelog/add-phonelog/add-phonelog.component.html
+++ b/angular-client/src/app/components/phonelog/add-phonelog/add-phonelog.component.html
@@ -53,7 +53,7 @@
 
   <mat-form-field class="assignedTo">
     <mat-select placeholder="Assign to:" [(value)]="assignedTo" formControlName="assignedTo">
-      <mat-option *ngFor="let worker of allWorkers" [disabled]="isDisabled(worker._id)" [value]="worker._id">
+      <mat-option *ngFor="let worker of allWorkers" [value]="worker._id">
         {{ worker.name }} ({{ worker.email }})
       </mat-option>
     </mat-select>
