#138 Fixed note and document modals for textareasize bug

--- a/angular-client/src/app/components/documents/document-modal/document-modal.component.html
+++ b/angular-client/src/app/components/documents/document-modal/document-modal.component.html
@@ -2,7 +2,7 @@
 <mat-dialog-content>
   <form #documentForm="ngForm">
     <mat-form-field>
-      <textarea matInput placeholder="Document description" name="text" matTextareaAutosize matAutosizeMinRows="2" matAutosizeMaxRows="5"
+      <textarea matInput placeholder="Document description" name="text" matAutosizeMinRows="2" matAutosizeMaxRows="5"
         [(ngModel)]="document.type"></textarea>
     </mat-form-field>
     <div class="fileupload">
