#138 Fixed textareasize to use cdkTextareaAutosize

--- a/angular-client/src/app/components/phonelog/add-phonelog/add-phonelog.component.html
+++ b/angular-client/src/app/components/phonelog/add-phonelog/add-phonelog.component.html
@@ -45,7 +45,7 @@
   </div>
 
   <mat-form-field class="message">
-    <textarea matInput placeholder="Message" matAutosizeMinRows="5" name="message" formControlName="message"></textarea>
+    <textarea matInput placeholder="Message" cdkTextareaAutosize="true" matAutosizeMinRows="5" name="message" formControlName="message"></textarea>
     <mat-hint align="start">Their message, when to call, extension number...</mat-hint>
   </mat-form-field>
 
