Assigning task for a given phonelog for non-admins, using get/allnames route that only returns id and name #133

--- a/angular-client/src/app/components/phonelog/add-phonelog/add-phonelog.component.html
+++ b/angular-client/src/app/components/phonelog/add-phonelog/add-phonelog.component.html
@@ -54,7 +54,7 @@
   <mat-form-field class="assignedTo">
     <mat-select placeholder="Assign to:" [(value)]="assignedTo" formControlName="assignedTo">
       <mat-option *ngFor="let worker of allWorkers" [value]="worker._id">
-        {{ worker.name }} ({{ worker.email }})
+        {{ worker.name }}
       </mat-option>
     </mat-select>
   </mat-form-field>
