--- a/angular-client/src/app/components/phonelog/edit-phonelog/edit-phonelog.component.html
+++ b/angular-client/src/app/components/phonelog/edit-phonelog/edit-phonelog.component.html
@@ -53,7 +53,7 @@
         <mat-form-field class="assignedTo">
             <mat-select placeholder="Assign to:" [(value)]="assignedTo" formControlName="assignedTo">
                 <mat-option *ngFor="let worker of allWorkers" [value]="worker._id">
-                    {{ worker.name }} ({{ worker.email }})
+                    {{ worker.name }}
                 </mat-option>
             </mat-select>
         </mat-form-field>
@@ -65,7 +65,7 @@
     </mat-slide-toggle>
 
     <mat-form-field class="message">
-        <textarea matInput placeholder="Message" matTextareaAutosize matAutosizeMinRows="5" name="message" formControlName="message"></textarea>
+        <textarea matInput placeholder="Message" matAutosizeMinRows="5" name="message" formControlName="message"></textarea>
         <mat-hint align="start">Their message, when to call, extension number...</mat-hint>
     </mat-form-field>
 
