--- a/angular-client/src/app/components/casefiles/case-modal/case-modal.component.html
+++ b/angular-client/src/app/components/casefiles/case-modal/case-modal.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>New Case</h1>
+<h1 mat-dialog-title>{{"CaseModal.New"|translate}}</h1>
 <h5>Participant: {{data.participant.name}}</h5>
 <form #caseForm="ngForm">
   <mat-form-field>
