--- a/angular-client/src/styles.css
+++ b/angular-client/src/styles.css
@@ -120,3 +120,10 @@ div.sortNSearchToolbar{
 mat-form-field.searchBox{
   padding-left: 0.5rem;
 }
+
+@media (max-width: 599px) {
+  .modal-dialog .mat-form-field-infix {
+      max-width: 120px;
+      width: 120px;
+  }
+}
